[gd_scene load_steps=38 format=3 uid="uid://c7fyo24ou0om7"]

[ext_resource type="Material" uid="uid://vtmbky35o2p2" path="res://resources/lit-mat.tres" id="1_n5o7v"]
[ext_resource type="Script" path="res://scenes/components/mobs/mover/mover.gd" id="2_6yvkr"]
[ext_resource type="PackedScene" uid="uid://den0ajf1m1ws3" path="res://scenes/components/mobs/bullet/bullet.tscn" id="3_q8d5r"]
[ext_resource type="PackedScene" uid="uid://7jh6at667qqy" path="res://scenes/components/DamageManager.tscn" id="4_rjqd6"]
[ext_resource type="Texture2D" uid="uid://ch4f7cqanjq8i" path="res://art/sprites/alert.png" id="5_t8gwx"]
[ext_resource type="Texture2D" uid="uid://br1uqupw4mq8x" path="res://art/sprites/fire.png" id="6_ahb7p"]
[ext_resource type="Texture2D" uid="uid://c4026v6xiksqa" path="res://art/sprites/kenny-1px/monochrome_tilemap_transparent.png" id="7_v4pk3"]
[ext_resource type="Texture2D" uid="uid://ca1a0465063y0" path="res://art/sprites/enemy-dead-sheet.png" id="8_yqls7"]
[ext_resource type="Texture2D" uid="uid://dkj27jbikl6lc" path="res://art/sprites/tear_particle.png" id="9_q63su"]

[sub_resource type="AtlasTexture" id="AtlasTexture_38ne5"]
atlas = ExtResource("5_t8gwx")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5oef"]
atlas = ExtResource("5_t8gwx")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4q51b"]
atlas = ExtResource("5_t8gwx")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2u00n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38ne5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s5oef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4q51b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_38ne5")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"alert",
"speed": 7.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_fqe4p"]
atlas = ExtResource("6_ahb7p")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqeww"]
atlas = ExtResource("6_ahb7p")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_krjn5"]
atlas = ExtResource("6_ahb7p")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahrmm"]
atlas = ExtResource("6_ahb7p")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_23gr4"]
atlas = ExtResource("7_v4pk3")
region = Rect2(0, 323, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n6vp"]
atlas = ExtResource("7_v4pk3")
region = Rect2(17, 323, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpira"]
atlas = ExtResource("7_v4pk3")
region = Rect2(0, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iebpk"]
atlas = ExtResource("7_v4pk3")
region = Rect2(17, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5yke"]
atlas = ExtResource("7_v4pk3")
region = Rect2(34, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nx522"]
atlas = ExtResource("7_v4pk3")
region = Rect2(51, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2svn4"]
atlas = ExtResource("7_v4pk3")
region = Rect2(17, 306, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqeio"]
atlas = ExtResource("7_v4pk3")
region = Rect2(34, 306, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7grip"]
atlas = ExtResource("8_yqls7")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6wt"]
atlas = ExtResource("8_yqls7")
region = Rect2(13, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb5gp"]
atlas = ExtResource("8_yqls7")
region = Rect2(26, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_06x3j"]
atlas = ExtResource("8_yqls7")
region = Rect2(39, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_y84xt"]
atlas = ExtResource("8_yqls7")
region = Rect2(52, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_7n6sb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqe4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqeww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_krjn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahrmm")
}],
"loop": true,
"name": &"fire",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_23gr4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n6vp")
}],
"loop": true,
"name": &"mover",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpira")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iebpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5yke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nx522")
}],
"loop": true,
"name": &"stalker",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2svn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqeio")
}],
"loop": true,
"name": &"still",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7grip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6wt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb5gp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06x3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y84xt")
}],
"loop": false,
"name": &"still_dead",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ahux"]
size = Vector2(10.0577, 14.0512)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_eiuu1"]
polygon = PackedVector2Array(-4, -6, -7, -4, -7, 4, -6, 5, -6, 8, -2, 8, -2, 7, 2, 7, 2, 8, 6, 8, 6, 4, 7, 3, 7, -3, 6, -5, 4, -6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ykj56"]
size = Vector2(17, 17)

[sub_resource type="Curve" id="Curve_wkim2"]
_data = [Vector2(0.00238663, 0.4), 0.0, 0.0, 0, 0, Vector2(0.553699, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_wbgvp"]
curve = SubResource("Curve_wkim2")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_204yp"]
particle_flag_disable_z = true
spread = 17.15
gravity = Vector3(0, 0, 0)
initial_velocity_min = 136.88
initial_velocity_max = 250.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_curve = SubResource("CurveTexture_wbgvp")
color = Color(1, 0, 0, 1)

[node name="Mover" type="CharacterBody2D"]
material = ExtResource("1_n5o7v")
collision_layer = 4
collision_mask = 14
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("2_6yvkr")
bullet = ExtResource("3_q8d5r")
metadata/_edit_group_ = true

[node name="DamageManager" parent="." instance=ExtResource("4_rjqd6")]
health = 30

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.19

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="Alert" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_2u00n")
animation = &"alert"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
sprite_frames = SubResource("SpriteFrames_7n6sb")
animation = &"still_dead"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.2)
scale = Vector2(1.03403, 0.910956)
shape = SubResource("RectangleShape2D_8ahux")
debug_color = Color(0.898039, 0.27451, 0.396078, 0.419608)

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_eiuu1")

[node name="FromBox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FromBox"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_ykj56")

[node name="DamageParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 25
process_material = SubResource("ParticleProcessMaterial_204yp")
texture = ExtResource("9_q63su")
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 1.0

[connection signal="health_updated" from="DamageManager" to="." method="_on_damage_manager_health_updated"]
[connection signal="timeout" from="FireTimer" to="." method="fire"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
